--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,14 @@
 <resources>
     //登录界面部分
     <string name="app_name">aaa</string>
+
+    <string name="offline">offline</string>
+    <string name="online">online</string>
+
     <string name="ipInput">Please input the other player\'s ip</string>
-    <string name="startButton">start</string>
     <string name="yourIp">your ip</string>
     <string name="inputText">ip</string>
-    <string name="serverButton">as sever</string>
+    <string name="clientButton">client</string>
+    <string name="serverButton">server</string>
+
 </resources>
